tests/fixtures/LatestTests/ConstVariableDeclarationTests/errors/uninitialized_use_before_declare.fg
/; EXPECT_ERROR: VariableNotFound
print(x, "\n")
const x:int = 5

